# pytemplate

./: LICENSE  README.md  cookiecutter.json  sesh
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.project_slug }}/: LICENSE  Makefile  README.md  gitignore  lintrunner.toml  pyproject.toml
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.package_name }}/: __init__.py
{{ cookiecutter.project_slug }}/tests/: test_{{ cookiecutter.project_slug }}.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/: __init__.py
