[build-system]
requires = ["flit_core >=3.9,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "{{ cookiecutter.pypi_project_name }}"
authors = [
  { name = "{{ cookiecutter.author }}", email="{{ cookiecutter.email }}" },
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  {% if cookiecutter.license == "MIT" -%}
  "License :: OSI Approved :: MIT License",
  {% endif %}
  "Operating System :: OS Independent",
]
dynamic = ["version", "description"]
dependencies = [
{% if cookiecutter.add_ml_deps -%}
"torch >= 2.3.0",
"torchaudio >= 2.3.0",
"torchvision >= 0.18.0",
"torchrl >= 0.4.0",
"pandas >= 2.2.0",
"scikit-learn >= 1.4.2",
"notebook >= 7.1.3",
"lightning >= 2.2.4",
"transformers >=  4.41.2",
"accelerate >= 0.31.0",
"bitsandbytes >= 0.41.0",
"tokenizers >= 0.19.1",
{% endif -%}
]

[project.urls]

[tool.flit.module]
name = "{{ cookiecutter.module_name }}"

[project.scripts]

[project.optional-dependencies]
dev = [
  "pytest >= 8.0.0",
  "lintrunner >= 0.12.5",
  "lintrunner-adapters >= 0.12.3",
  "pylint >= 3.1.0",
  "ruff >= 0.4.3"
]

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
