[build-system]
requires = ["setuptools >= 75.6"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.pypi_project_name }}"
authors = [
  { name = "{{ cookiecutter.author }}", email="{{ cookiecutter.email }}" },
]
description = "{{ cookiecutter.description }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
classifiers = [
  "Programming Language :: Python :: 3",
  {% if cookiecutter.license == "MIT" -%}
  "License :: OSI Approved :: MIT License",
  {% endif -%}
  "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies = [
{% if cookiecutter.add_ml_deps -%}
"torch >= 2.6.0",
"torchaudio >= 2.6.0",
"torchvision >= 0.21.0",
"torchrl >= 0.4.0",
"pandas >= 2.2.3",
"scikit-learn >= 1.6.0",
"scipy >= 1.14.1",
"notebook >= 7.1.3",
"lightning >= 2.5.1",
"transformers >=  4.51.3",
"accelerate >= 1.5.2",
"bitsandbytes >= 0.41.0",
"tokenizers >= 0.21.1",
"datasets >= 3.6.0",
"tqdm >= 4.66.5",
"tensorboard >= 2.17.1",
"seaborn [stats] >= 0.13.2",
"ydf >= 0.9.0",
"jupyterlab-vim >= 4.1.4",
"optuna >= 4.3.0",
{% endif -%}
]

[project.urls]

[tool.setuptools.dynamic]
version = {attr = "{{ cookiecutter.package_name }}.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = [ "{{ cookiecutter.package_name }}"]

[project.scripts]

[project.optional-dependencies]
dev = [
  "pytest >= 8.0.0",
  "lintrunner >= 0.12.5",
  "lintrunner-adapters >= 0.12.3",
  "pylint >= 3.1.0",
  "ruff >= 0.4.3"
]

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
